Iterating on scenario

--- a/appSettings.json
+++ b/appSettings.json
@@ -8,8 +8,8 @@
     "scenario": {
       "name": "wiki-cohere-english-embedding-only",
       "sliceCount": "100000",
-      "skipIngestion": true,
-      "skipQuery": false,
+      "runIngestion": true,
+      "runQuery": false,
       /* Number of parallel batches reading dataset file and queing for ingestion*/
       "numBulkIngestionBatchCount": 10,
       /* Number of parallel batches reading query file and queing for query */
