--- a/appSettings.json
+++ b/appSettings.json
@@ -5,6 +5,7 @@
     "cosmosDatabaseId": "vector-benchmarking",
     "cosmosContainerId": "",
     "dataFilesBasePath": "C:\\Users\\your-username\\Downloads\\vector-benchmarking\\data",
+    "errorLogBasePath": "C:\\Users\\your-username\\Downloads\\vector-benchmarking\\data\\runLog",
     "scenario": {
       "name": "wiki-cohere-english-embedding-only",
       "sliceCount": "100000",
@@ -14,8 +15,13 @@
       "numBulkIngestionBatchCount": 10,
       /* Number of parallel batches reading query file and queing for query */
       "numQueryBatchCount": 1,
-      "computeRecall": true,
-      "kValues": [10]
+      "warmup": {
+        "enabled": true,
+        "numWarmupQueries": 1000
+      },
+      "computeRecall": false,
+      "computeLatencyAndRUStats": true,
+      "kValues": [ 10 ]
     },
     "waitForUserInputBeforeExit": true
   }
