Read all iterations

--- a/appSettings.json
+++ b/appSettings.json
@@ -11,16 +11,14 @@
       "sliceCount": "100000",
       "runIngestion": true,
       "runQuery": false,
-      /* Number of parallel batches reading dataset file and queing for ingestion*/
-      "numBulkIngestionBatchCount": 10,
-      /* Number of parallel batches reading query file and queing for query */
-      "numQueryBatchCount": 1,
+      /* Number of parallel batches reading dataset file and queing for ingestion */
+      "numBulkIngestionBatchCount": 100,
       "warmup": {
-        "enabled": true,
+        "enabled": false,
         "numWarmupQueries": 1000
       },
       "computeRecall": false,
-      "computeLatencyAndRUStats": true,
+      "computeLatencyAndRUStats": false,
       "kValues": [ 10 ]
     },
     "waitForUserInputBeforeExit": true
