--- a/appSettings.json
+++ b/appSettings.json
@@ -7,7 +7,8 @@
     "dataFilesBasePath": "C:\\Users\\your-username\\Downloads\\vector-benchmarking\\data",
     "errorLogBasePath": "C:\\Users\\your-username\\Downloads\\vector-benchmarking\\data\\runLog",
     "scenario": {
-      "name": "wiki-cohere-english-embedding-only",
+      "name": "wiki-cohere-english-embedding-only-streaming",
+      /* Not applicable to streaming scenario but single shot ingestion */
       "sliceCount": "100000",
       "runIngestion": true,
       "runQuery": false,
@@ -19,7 +20,11 @@
       },
       "computeRecall": false,
       "computeLatencyAndRUStats": false,
-      "kValues": [ 10 ]
+      "kValues": [ 10 ],
+      "streaming": {
+        "startOperationId": 1,
+        "totalVectors": 2300000
+      }
     },
     "waitForUserInputBeforeExit": true
   }
