--- a/appSettings.json
+++ b/appSettings.json
@@ -3,7 +3,9 @@
     "accountEndpoint": "https://your-account-endpoint.documents.azure.com:443/",
     "authKeyOrResourceTokenCredential": "your-auth-key-or-resource-token",
     "cosmosDatabaseId": "vector-benchmarking",
-    "cosmosContainerId": "",
+    "cosmosContainerId": "your-conatiner-id",
+    "cosmosContainerRUInitial": "init-RU", // Initial RU for the container creation
+    "cosmosContainerRUFinal": "final-RU", // Final RU for the container update to leverage the full RU
     "dataFilesBasePath": "C:\\Users\\your-username\\Downloads\\vector-benchmarking\\data",
     "errorLogBasePath": "C:\\Users\\your-username\\Downloads\\vector-benchmarking\\data\\runLog",
     "scenario": {
