--- a/appSettings.json
+++ b/appSettings.json
@@ -4,8 +4,8 @@
     "authKeyOrResourceTokenCredential": "your-auth-key-or-resource-token",
     "cosmosDatabaseId": "vector-benchmarking",
     "cosmosContainerId": "your-conatiner-id",
-    "cosmosContainerRUInitial": "init-RU", // Initial RU for the container creation
-    "cosmosContainerRUFinal": "final-RU", // Final RU for the container update to leverage the full RU
+    "cosmosContainerRUInitial": "0", // will use default RU if it's 0 othereise will override with the value provided
+    "cosmosContainerRUFinal": "0", // Final RU for the container update to leverage the full RU
     "dataFilesBasePath": "C:\\Users\\your-username\\Downloads\\vector-benchmarking\\data",
     "errorLogBasePath": "C:\\Users\\your-username\\Downloads\\vector-benchmarking\\data\\runLog",
     "scenario": {
