--- a/appSettings.json
+++ b/appSettings.json
@@ -25,7 +25,8 @@
       "kValues": [ 10 ],
       "streaming": {
         "startOperationId": 1,
-        "totalVectors": 2300000
+        "stopOperationId": 1001,
+        "totalNetVectorsToIngest": 3000000
       }
     },
     "waitForUserInputBeforeExit": true
