Refactor the base class and add msturing scenario (#6)
Co-authored-by: Haiyang Xu <haixu@microsoft.com>

--- a/appSettings.json
+++ b/appSettings.json
@@ -3,7 +3,9 @@
     "accountEndpoint": "https://your-account-endpoint.documents.azure.com:443/",
     "authKeyOrResourceTokenCredential": "your-auth-key-or-resource-token",
     "cosmosDatabaseId": "vector-benchmarking",
-    "cosmosContainerId": "",
+    "cosmosContainerId": "your-conatiner-id",
+    "cosmosContainerRUInitial": "0", // will use default RU if it's 0 othereise will override with the value provided
+    "cosmosContainerRUFinal": "0", // Final RU for the container update to leverage the full RU
     "dataFilesBasePath": "C:\\Users\\your-username\\Downloads\\vector-benchmarking\\data",
     "errorLogBasePath": "C:\\Users\\your-username\\Downloads\\vector-benchmarking\\data\\runLog",
     "scenario": {
@@ -23,7 +25,8 @@
       "kValues": [ 10 ],
       "streaming": {
         "startOperationId": 1,
-        "totalVectors": 2300000
+        "stopOperationId": 1001,
+        "totalNetVectorsToIngest": 3000000
       }
     },
     "waitForUserInputBeforeExit": true
