--- a/appSettings.json
+++ b/appSettings.json
@@ -3,32 +3,33 @@
     "accountEndpoint": "https://your-account-endpoint.documents.azure.com:443/",
     "authKeyOrResourceTokenCredential": "your-auth-key-or-resource-token",
     "cosmosDatabaseId": "vector-benchmarking",
-    "cosmosContainerId": "your-conatiner-id",
-    "cosmosContainerRUInitial": "0", // will use default RU if it's 0 othereise will override with the value provided
-    "cosmosContainerRUFinal": "0", // Final RU for the container update to leverage the full RU
-    "dataFilesBasePath": "C:\\Users\\your-username\\Downloads\\vector-benchmarking\\data",
-    "errorLogBasePath": "C:\\Users\\your-username\\Downloads\\vector-benchmarking\\data\\runLog",
+    "cosmosContainerId": "amazon-1M-1", //"wiki-100k-partition-1",//
+    "cosmosContainerRUInitial": "6000", // will use default RU if it's 0 othereise will override with the value provided
+    "cosmosContainerRUFinal": "10000", // Final RU for the container update to leverage the full RU
+    "dataFilesBasePath": "C:\\Users\\user\\OneDrive - Microsoft\\Cosmos DB\\amazon",
+    "errorLogBasePath": "C:\\Logs",
     "scenario": {
-      "name": "wiki-cohere-english-embedding-only-streaming",
+      "name": "amazon", //"wiki-cohere-english-embedding-only",
       /* Not applicable to streaming scenario but single shot ingestion */
-      "sliceCount": "100000",
-      "runIngestion": true,
-      "runQuery": false,
+      "sliceCount": "1000000",
+      "runIngestion": false,
+      "runQuery": true,
+      "numQueries": 100,
       /* Number of parallel batches reading dataset file and queing for ingestion */
-      "numBulkIngestionBatchCount": 100,
+      "numBulkIngestionBatchCount": 50,
       "warmup": {
         "enabled": false,
-        "numWarmupQueries": 1000
+        "numWarmupQueries": 100
       },
-      "computeRecall": false,
-      "computeLatencyAndRUStats": false,
+      "computeRecall": true,
+      "computeLatencyAndRUStats": true,
       "kValues": [ 10 ],
       "streaming": {
         "startOperationId": 1,
-        "stopOperationId": 1001,
-        "totalNetVectorsToIngest": 3000000
+        "totalVectors": 2300000
       }
     },
     "waitForUserInputBeforeExit": true
   }
 }
+
