Support Role Based Access Control (#13)
Support Role based Access Control in addition to authentication tokens.

--- a/appSettings.json
+++ b/appSettings.json
@@ -1,7 +1,8 @@
 {
   "AppSettings": {
     "accountEndpoint": "https://your-account-endpoint.documents.azure.com:443/",
-    "authKeyOrResourceTokenCredential": "your-auth-key-or-resource-token",
+    "useAADAuth": false,
+    "authKey": "your-auth-key",
     "cosmosDatabaseId": "vector-benchmarking",
     "cosmosContainerId": "amazon-1M-1", //"wiki-100k-partition-1",//
     "cosmosContainerRUInitial": "6000", // will use default RU if it's 0 othereise will override with the value provided
