accept config file

--- a/appSettings.json
+++ b/appSettings.json
@@ -15,6 +15,7 @@
       "sliceCount": "100000",
       "runIngestion": true,
       "runQuery": false,
+      "numQueries": 0,// specific num of queries, default 0 will run against entire query file
       /* Number of parallel batches reading dataset file and queing for ingestion */
       "numBulkIngestionBatchCount": 100,
       "warmup": {
