--- a/appSettings.json
+++ b/appSettings.json
@@ -15,6 +15,7 @@
       "sliceCount": "100000",
       "runIngestion": true,
       "runQuery": false,
+      "numQueries": 0,// specific num of queries, default 0 will run against entire query file
       "ingestWithBulkExecution": false,
       /* Number of parallel batches reading dataset file and queing for ingestion */
       "numIngestionBatchCount": 1,
