--- a/appSettings.json
+++ b/appSettings.json
@@ -12,10 +12,11 @@
     "scenario": {
       "name": "amazon", //"wiki-cohere-english-embedding-only",
       /* Not applicable to streaming scenario but single shot ingestion */
-      "sliceCount": "1000000",
-      "runIngestion": false,
-      "runQuery": true,
-      "numQueries": 100,
+      "sliceCount": "100000",
+      "runIngestion": true,
+      "runQuery": false,
+      "numQueries": 0,// specific num of queries, default 0 will run against entire query file
+      "ingestWithBulkExecution": false,
       /* Number of parallel batches reading dataset file and queing for ingestion */
       "numBulkIngestionBatchCount": 50,
       "warmup": {
