--- a/appSettings.json
+++ b/appSettings.json
@@ -18,9 +18,8 @@
       "numQueries": 0, // specific num of queries, default 0 will run against entire query file
       "searchListSizeMultiplier": 5, // multiplier for search list, default 5
       "MaxPhysicalPartitionCount": 100, // client max conccurrent connections
-      "BulkExecution": false, //Always query with non-bulk client to measure latency appropriately, please turn it off in the config file
-      /* Number of parallel batches reading dataset file and queing for ingestion */
-      "numIngestionBatchCount": 1,
+      "BulkIngestion": false,
+      "numIngestionBatchCount": 1, // Number of parallel batches reading dataset file and queing for ingestion 
       "warmup": {
         "enabled": false,
         "numWarmupQueries": 1000
