--- a/appSettings.json
+++ b/appSettings.json
@@ -18,7 +18,7 @@
       "numQueries": 0, // specific num of queries, default 0 will run against entire query file
       "searchListSizeMultiplier": 5, // multiplier for search list, default 5
       "maxPhysicalPartitionCount": 0, // client max conccurrent connections
-      "BulkIngestion": false, // use bulk client for ingestion
+      "ingestWithBulkExecution": false, // use bulk client for ingestion
       "numIngestionBatchCount": 1, // Number of parallel batches reading dataset file and queing for ingestion 
       "warmup": {
         "enabled": false,
