--- a/appSettings.json
+++ b/appSettings.json
@@ -4,11 +4,11 @@
     "useAADAuth": false,
     "authKey": "your-auth-key",
     "cosmosDatabaseId": "vector-benchmarking",
-    "cosmosContainerId": "amazon-1M-1", //"wiki-100k-partition-1",//
-    "cosmosContainerRUInitial": "6000", // will use default RU if it's 0 othereise will override with the value provided
-    "cosmosContainerRUFinal": "10000", // Final RU for the container update to leverage the full RU
-    "dataFilesBasePath": "C:\\Users\\user\\OneDrive - Microsoft\\Cosmos DB\\amazon",
-    "errorLogBasePath": "C:\\Logs",
+    "cosmosContainerId": "your-conatiner-id",
+    "cosmosContainerRUInitial": "0", // will use default RU if it's 0 othereise will override with the value provided
+    "cosmosContainerRUFinal": "0", // Final RU for the container update to leverage the full RU
+    "dataFilesBasePath": "C:\\Users\\your-username\\Downloads\\vector-benchmarking\\data",
+    "errorLogBasePath": "C:\\Users\\your-username\\Downloads\\vector-benchmarking\\data\\runLog",
     "scenario": {
       "name": "wiki-cohere-english-embedding-only-1m-replace-streaming",
       /* Not applicable to streaming scenario but single shot ingestion */
@@ -22,17 +22,17 @@
       "numIngestionBatchCount": 1, // Number of parallel batches reading dataset file and queing for ingestion 
       "warmup": {
         "enabled": false,
-        "numWarmupQueries": 100
+        "numWarmupQueries": 1000
       },
-      "computeRecall": true,
-      "computeLatencyAndRUStats": true,
+      "computeRecall": false,
+      "computeLatencyAndRUStats": false,
       "kValues": [ 10 ],
       "streaming": {
         "startOperationId": 1,
-        "totalVectors": 2300000
+        "stopOperationId": 1001,
+        "totalNetVectorsToIngest": 3000000
       }
     },
     "waitForUserInputBeforeExit": true
   }
 }
-
