Added provision to have a custom start vector id for ingestion

--- a/appSettings.json
+++ b/appSettings.json
@@ -19,7 +19,8 @@
       "searchListSizeMultiplier": 5, // multiplier for search list, default 5
       "maxPhysicalPartitionCount": 0, // client max conccurrent connections
       "ingestWithBulkExecution": false, // use bulk client for ingestion
-      "numIngestionBatchCount": 1, // Number of parallel batches reading dataset file and queing for ingestion 
+      "numIngestionBatchCount": 1, // Number of parallel batches reading dataset file and queing for ingestion
+      "startVectorId": 0, // start vector id for ingestion"
       "warmup": {
         "enabled": false,
         "numWarmupQueries": 1000
