--- a/VectorIndexScenarioSuite.csproj
+++ b/VectorIndexScenarioSuite.csproj
@@ -55,12 +55,12 @@
     <Compile Include="src\ScenarioMetrics.cs" />
     <Compile Include="src\Scenarios.cs" />
     <Compile Include="src\WikiCohereEnglishEmbeddingBase.cs" />
-    <Compile Include="src\WikiCohereEnglishEmbeddingOnly1MDeleteReplaceStreamingScenario.cs" />
-    <Compile Include="src\WikiCohereEnglishEmbeddingOnly1MDeleteStreamingScenario.cs" />
-    <Compile Include="src\WikiCohereEnglishEmbeddingOnly1MReplaceStreamingScenario.cs" />
-    <Compile Include="src\WikiCohereEnglishEmbeddingOnly35MDeleteReplaceStreamingScenario.cs" />
-    <Compile Include="src\WikiCohereEnglishEmbeddingOnly35MDeleteStreamingScenario.cs" />
-    <Compile Include="src\WikiCohereEnglishEmbeddingOnly35MReplaceStreamingScenario.cs" />
+    <Compile Include="src\streaming\WikiCohereEnglishEmbeddingOnly1MDeleteReplaceStreamingScenario.cs" />
+    <Compile Include="src\streaming\WikiCohereEnglishEmbeddingOnly1MDeleteStreamingScenario.cs" />
+    <Compile Include="src\streaming\WikiCohereEnglishEmbeddingOnly1MReplaceStreamingScenario.cs" />
+    <Compile Include="src\streaming\WikiCohereEnglishEmbeddingOnly35MDeleteReplaceStreamingScenario.cs" />
+    <Compile Include="src\streaming\WikiCohereEnglishEmbeddingOnly35MDeleteStreamingScenario.cs" />
+    <Compile Include="src\streaming\WikiCohereEnglishEmbeddingOnly35MReplaceStreamingScenario.cs" />
     <Compile Include="src\WikiCohereEnglishEmbeddingOnlyScenario.cs" />
     <Compile Include="src\filtersearch\AutomotiveEcommerceDocument.cs" />
     <Compile Include="src\filtersearch\AutomotiveEcommerceScenario.cs" />
