refactor and add bigann uint8 type

--- a/VectorIndexScenarioSuite.csproj
+++ b/VectorIndexScenarioSuite.csproj
@@ -42,12 +42,13 @@
     </None>         
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="src\BigANNBinaryEmbeddingScearioBase.cs" />
-    <Compile Include="src\BigANNBinaryFormat.cs" />
+    <Compile Include="src\EmbeddingScearioBase.cs" />
+    <Compile Include="src\BinaryFormat.cs" />
     <Compile Include="src\EmbeddingDocumentBase.cs" />
     <Compile Include="src\GroundTruthValidator.cs" />
     <Compile Include="src\JsonDocumentFactory.cs" />
     <Compile Include="src\MSMarcoEmbeddingOnlyScenario.cs" />
+    <Compile Include="src\BigANNEmbeddingOnlyScenario.cs" />
     <Compile Include="src\MSTuringEmbeddingOnlyScenario.cs" />
     <Compile Include="src\Program.cs" />
     <Compile Include="src\Runbook.cs" />
