add support for sharded DiskANN

--- a/appSettings.json
+++ b/appSettings.json
@@ -32,7 +32,9 @@
         "startOperationId": 1,
         "stopOperationId": 1001,
         "totalNetVectorsToIngest": 3000000
-      }
+      },
+      "enableShardedDiskANN": false,
+      "vectorIndexShardKey": "/year"
     },
     "waitForUserInputBeforeExit": true
   }
