Add support for sharded DiskANN (#26)
This PR adds support for sharded DiskANN

--- a/appSettings.json
+++ b/appSettings.json
@@ -4,7 +4,7 @@
     "useAADAuth": false,
     "authKey": "your-auth-key",
     "cosmosDatabaseId": "vector-benchmarking",
-    "cosmosContainerId": "your-conatiner-id",
+    "cosmosContainerId": "your-container-id",
     "cosmosContainerRUInitial": "0", // will use default RU if it's 0 othereise will override with the value provided
     "cosmosContainerRUFinal": "0", // Final RU for the container update to leverage the full RU
     "dataFilesBasePath": "C:\\Users\\your-username\\Downloads\\vector-benchmarking\\data",
@@ -16,7 +16,7 @@
       "runIngestion": true,
       "runQuery": false,
       "numQueries": 0, // specific num of queries, default 0 will run against entire query file
-      "searchListSizeMultiplier": 5, // multiplier for search list, default 5
+      "searchListSizeMultiplier": 10, // multiplier for search list, default 10
       "maxPhysicalPartitionCount": 0, // client max conccurrent connections
       "ingestWithBulkExecution": false, // use bulk client for ingestion
       "numIngestionBatchCount": 1, // Number of parallel batches reading dataset file and queing for ingestion
@@ -32,6 +32,10 @@
         "startOperationId": 1,
         "stopOperationId": 1001,
         "totalNetVectorsToIngest": 3000000
+      },
+      "sharded": {
+        "enableShardedDiskANN": false,
+        "vectorIndexShardKey": "/your-shard-key" // shard key for sharded diskANN index
       }
     },
     "waitForUserInputBeforeExit": true
