--- a/appSettings.json
+++ b/appSettings.json
@@ -15,7 +15,7 @@
     "cosmosContainerRUFinal": "0", // Final RU for the container update to leverage the full RU
     "dataFilesBasePath": "C:\\Users\\your-username\\Downloads\\vector-benchmarking\\data",
     "errorLogBasePath": "C:\\Users\\your-username\\Downloads\\vector-benchmarking\\data\\runLog",
-    "deleteContainerOnStart": false,
+    "deleteContainerOnStart": false, // CAUTION: Setting to 'true' will delete the container and all data in it!!!
     "scenario": {
       "name": "wiki-cohere-english-embedding-only-1m-replace-streaming",
       /* Not applicable to streaming scenario but single shot ingestion */
