--- a/appSettings.json
+++ b/appSettings.json
@@ -34,6 +34,7 @@
       },
       "computeRecall": false,
       "computeLatencyAndRUStats": false,
+      "quantizationByteSize": 192,
       "kValues": [ 10 ],
       "streaming": {
         "startOperationId": 1,
