Addition of endVectorId
(cherry picked from commit fd2d4d8772fb8b670a14d595074e8d612ae22cda)

--- a/appSettings.json
+++ b/appSettings.json
@@ -28,6 +28,7 @@
       "ingestWithBulkExecution": false, // use bulk client for ingestion
       "numIngestionBatchCount": 1, // Number of parallel batches reading dataset file and queing for ingestion
       "startVectorId": 0, // start vector id for ingestion"
+      "endVectorId": 0, // end vector id for ingestion, if not set will use the entire dataset"
       "warmup": {
         "enabled": false,
         "numWarmupQueries": 1000
