--- a/appSettings.json
+++ b/appSettings.json
@@ -15,7 +15,7 @@
     "cosmosContainerRUFinal": "0", // Final RU for the container update to leverage the full RU
     "dataFilesBasePath": "C:\\Users\\your-username\\Downloads\\vector-benchmarking\\data",
     "errorLogBasePath": "C:\\Users\\your-username\\Downloads\\vector-benchmarking\\data\\runLog",
-    "failedIdsFilePath": "C:\\Users\\your-username\\Downloads\\vector-benchmarking\\data\\failedIds",
+    "failedIdsFilePath": "C:\\Users\\your-username\\Downloads\\vector-benchmarking\\data\\failedIds", // Path to the file with failed ids. File should be in csv format.
     "onlyIngestFailedIds": false, // if true will only ingest failed ids from the failedIdsFilePath
     "deleteContainerOnStart": false, // CAUTION: Setting to 'true' will delete the container and all data in it!!!
     "scenario": {
