--- a/appSettings.json
+++ b/appSettings.json
@@ -34,7 +34,7 @@
       },
       "computeRecall": false,
       "computeLatencyAndRUStats": false,
-      "quantizationByteSize": 192,
+      "quantizationByteSize": 0, // Will not use quantizationByteSize if 0.
       "kValues": [ 10 ],
       "streaming": {
         "startOperationId": 1,
