[Vector Index] Add support for Quantization Byte Size (#33)
Cosmos DB SDK now supports Quantization Byte Size parameter - adding it

--- a/appSettings.json
+++ b/appSettings.json
@@ -34,6 +34,7 @@
       },
       "computeRecall": false,
       "computeLatencyAndRUStats": false,
+      "quantizationByteSize": 0, // Will not use quantizationByteSize if 0.
       "kValues": [ 10 ],
       "streaming": {
         "startOperationId": 1,
