change to pass empty string by default

--- a/appSettings.json
+++ b/appSettings.json
@@ -34,7 +34,7 @@
       },
       "computeRecall": false,
       "computeLatencyAndRUStats": false,
-      "quantizationByteSize": 0, // Will not use quantizationByteSize if 0.
+      "quantizationByteSize": "", // Will not use quantizationByteSize if empty.
       "kValues": [ 10 ],
       "streaming": {
         "startOperationId": 1,
