--- a/appSettings.json
+++ b/appSettings.json
@@ -34,7 +34,7 @@
       },
       "computeRecall": false,
       "computeLatencyAndRUStats": false,
-      "quantizationByteSize": "", // Will not use quantizationByteSize if empty.
+      "quantizationByteSize": "", // If empty, cosmosdb will decide an appropriate value.
       "kValues": [ 10 ],
       "streaming": {
         "startOperationId": 1,
