use empty default value for quantizationByteSize (#36)
use empty default value for quantizationByteSize so that by default we
dont pass any value

--- a/appSettings.json
+++ b/appSettings.json
@@ -34,7 +34,7 @@
       },
       "computeRecall": false,
       "computeLatencyAndRUStats": false,
-      "quantizationByteSize": 0, // Will not use quantizationByteSize if 0.
+      "quantizationByteSize": "", // If empty, cosmosdb will decide an appropriate value.
       "kValues": [ 10 ],
       "streaming": {
         "startOperationId": 1,
